2001-09-05  James LewisMoss  <jimdres@mindspring.com>

	* src/register/ledger-core/split-register-model-save.c
	(gnc_split_register_save_template_cells): Add missing comma.

2001-09-05  Robert Graham Merkel  <rgmerk@mira.net>

	* src/register/ledger-core/split-register-model-save.c: replace kvp-frame
	key string literal with #defines from schedXaction.h

	* src/gnome/window-register.c: rename "recur" commands "schedule".

2001-09-04  Robert Graham Merkel  <rgmerk@mira.net>

	* several SX-related .c files: replaced use of kvp_frame_{set,get}_slot, 
	with {set,get}_slot_path, replaced literals with #defines.

	* src/engine/SchedXaction.h: #define names for kvp_frame keys.

	* src/engine/dialog-sx-from-trans.h: fix freqspec and date/time setting bugs.

	* src/gnome/glade/sched-xact.glade: rename several items in editor dialog
	to match UI code.

2001-09-02  Dave Peticolas  <dave@krondo.com>

	* src/backend/file/sixtp-dom-generators.c (add_kvp_value_node):
	fix warning in case of empty kvp sub-frame

	* src/backend/file/io-gncxml-v2.c (clear_up_account_commodity):
	fix scu values

	* src/engine/Account.c (xaccInitAccount): initialize scu to 0

2001-09-02  Christian Stimming  <stimming@tuhh.de>

	* src/report/standard-reports/average-balance.scm: Ben Stanley
	<bds02@uow.edu.au>'s report fix.

2001-08-31  Dave Peticolas  <dave@krondo.com>

	* src/engine/Scrub.c: don't create accounts with no currency

2001-08-30  Robert Graham Merkel  <rgmerk@mira.net>

	* src/gnome/dialog-sx-from-trans.{ch}: New files, providing easy way
	to turn existing transactions into SX's.

	* src/engine/SX-ttinfo.{ch}: provide data structure for easy building
	of template transactions for SX.

	* src/engine/GNCId.h: changed include guards to fix in with policy.

	* src/engine/SchedXaction.{ch}: added function to turn structures in 
	SX-ttinfo.c into real template trans, fixed bugs.

	* src/engine/kvp-doc.txt: updated docs.

	* src/gnome/glade/sched-xact.glade: added dialog for SX-from-trans
