@@ -1,3 +1,9 @@
+2001-09-06  Christian Stimming  <stimming@tuhh.de>
+
+	* src/engine/messages.[hc]: Added support for i18n messages with
+	qualifying prefix; adapted from code by Zbigniew Chyla
+	<cyba@piast.t19.ds.pwr.wroc.pl>.
+
 2001-09-05  James LewisMoss  <jimdres@mindspring.com>
 
 	* src/register/ledger-core/split-register-model-save.c
